# mem-agent-mcp

./: .gitignore  LICENSE  Makefile  README.md  chat_cli.py  pyproject.toml
agent/: agent.py  model.py  pyproject.toml  settings.py  system_prompt.txt  tools.py
examples/: mem_agent_cli.py
mcp_server/: http_server.py  mcp_http_server.py  mcp_sse_server.py  pyproject.toml  python_server.py  server.py  settings.py  setup.py
mcp_server/scripts/: memory_setup_cli.py
memories/client_success/: meta.json  user.md
memories/client_success/entities/: account_playbook.md  client_health_check.md  client_northwind.md  client_orbitbank.md  client_photonics.md  escalation_matrix.md  onboarding_process.md  renewal_plan_orbitbank.md  renewal_strategy.md  team_lead.md
memory_connectors/: memory_connect.py  memory_wizard.py
