[project]
name = "mcp-server"
version = "0.1.0"
description = "Mock FastMCP server exposing minimal tools that leverage the agent package"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastmcp",
    "vllm; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "agent",
    "pygments>=2.19.2",
    "fastapi",
    "uvicorn",
    "sse-starlette",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "settings", "memory_setup"]

[tool.uv]
dev-dependencies = [
    "pytest",
]

[tool.uv.sources]
agent = { workspace = true }


